# greq

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS.md  LICENSE  PLAN.md  README.md  TODO.md  design.md  feature-requests.md  greq_content_tests.rs  greq_header_tests.rs  project-description.md  software_design.md  test-bad-dep-consumer.greq  test-bad-dep.greq  test-base-realistic.greq  test-base-simple.greq  test-base.greq  test-circular-a.greq  test-circular-b.greq  test-dep-a.greq  test-dep-b.greq  test-dep-c.greq  test-dep-consumer.greq  test-dep-fail.greq  test-example.greq  test-extending-realistic.greq  test-extending-simple.greq  test-extending-success.greq  test-extending.greq  test-good-dep-consumer.greq  test-good-dep.greq  test-invalid-dep-consumer.greq  test-invalid-dep.greq  test-merge-base.greq  test-merge-extending.greq
.github/: FUNDING.yml  copilot-instructions.md  implementation-details.md
api/: .gitignore  README.md  api-spec.md  composer.json  config.php  test.php
docs/: all_features_demo.greq  documentation.md  project-description.md  project_description.md
greq-examples/: 01-simple-get.greq  02-post-json.greq  03-extends-example.greq  04-create-user.greq  06-sophisticated-test.greq  07-headers-test-fixed.greq  08-auth-step.greq  10-json-path.greq  11-complex-workflow.greq  12-execute-before.greq  13-execute-after.greq  14-execute-both.greq  15-invalid-dependency-placeholder.greq  16-invalid-execute-after-placeholder.greq  17-invalid-condition-placeholder.greq  18-login-set-env.greq  19-use-env-variable.greq  20-static-env-vars.greq  21-test-set-env.greq  22-use-set-env.greq  create-user-allow-failure.greq  delete-user-fail.greq  environment-test.greq  invalid-allow-failure.greq  showcase-dependency-failure.greq  showcase-enhanced-handling.greq  showcase-silent-mode.greq  simple-success-test.greq  test-array-error.greq  test-connection-error.greq  test-dependency.greq  test-env-error.greq  (+13 more)
(+132 files in other folders)
