[package]
name = "greq"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "rt", "macros"] }
regex = "1.11.0"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
clap = { version = "4.5.19", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
http = "0.2.12"

[dev-dependencies]
wiremock = "0.5.22"