[package]
name = "greq2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
jsonpath = "0.1"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
