[package]
name = "greq"
version = "1.0.0"
edition = "2021"
authors = ["Gregory Chris <sgchris@gmail.com>"]
description = "A powerful HTTP testing tool with dependency management and request chaining"
license = "MIT"
repository = "https://github.com/sgchris/greq"
keywords = ["http", "testing", "api", "cli"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0"
jsonpath = "0.1"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.20"
tokio-test = "0.4"
